<resources>
    <string name="app_name">Group6</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="mainmenu_fragment_label">Main Menu Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>
    <string name="connection_fragment_label">Connection Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="group_name">Group 6</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="settings">Settings</string>
    <string name="connect_device">Connect Device</string>
    <string name="connection_status_label">Connection Status:</string>
    <string name="connection_status">Not Connected</string>
    <string name="returnText">Return</string>
    <string name="select_paired_device">Select Paired Device:</string>
    <string name="set_color">Set Color</string>
    <string name="reset_to_defaults">Reset to Defaults</string>
    <string name="low">Low</string>
    <string name="med">Med</string>
    <string name="high">High</string>
    <string name="sensitivity">Sensitivity:</string>
    <string name="use_custom_pattern">Use Custom Pattern</string>
    <string name="use_default_pattern">Use Default Pattern</string>
    <string name="led_grid">LED Grid</string>
</resources>
