<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <Button
        android:id="@+id/button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button21"
        app:layout_constraintTop_toBottomOf="@+id/textView_settings"
        app:layout_constraintVertical_bias="0.90999997" />

    <Button
        android:id="@+id/button_reset_to_defaults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_to_defaults"
        app:layout_constraintBottom_toTopOf="@+id/button_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_set_color"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/button_set_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_color"
        app:layout_constraintBottom_toTopOf="@+id/button_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_settings"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textView_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009" />

    <RadioGroup
        android:id="@+id/radiogroup_sensitivity"
        android:layout_width="224dp"
        android:layout_height="33dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_reset_to_defaults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_set_color">

        <RadioButton
            android:id="@+id/radiobutton_low"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/radiobutton_med"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/med" />

        <RadioButton
            android:id="@+id/radiobutton_high"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:text="@string/high" />

    </RadioGroup>

    <TextView
        android:id="@+id/textview_sensitivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensitivity"
        app:layout_constraintBottom_toTopOf="@+id/button_reset_to_defaults"
        app:layout_constraintEnd_toStartOf="@+id/radiogroup_sensitivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_set_color" />

    <RadioGroup
        android:id="@+id/radiogroup_pattern"
        android:layout_width="176dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@+id/button_set_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radiobutton_custom_pattern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_custom_pattern" />

        <RadioButton
            android:id="@+id/radiobutton_default_pattern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_default_pattern" />
    </RadioGroup>

    <GridView
        android:id="@+id/grid_led_matrix"
        android:layout_width="276dp"
        android:layout_height="276dp"
        android:numColumns="8"
        app:layout_constraintBottom_toTopOf="@+id/radiogroup_pattern"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_settings"
        app:layout_constraintVertical_bias="0.88" />

    <TextView
        android:id="@+id/textview_led_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/led_grid"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/grid_led_matrix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_settings"
        app:layout_constraintVertical_bias="0.88" />

    <Button
        android:id="@+id/button21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_settings"
        app:layout_constraintVertical_bias="0.90999997" />


</androidx.constraintlayout.widget.ConstraintLayout>