<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainMenuFragment">

    <fragment
        android:id="@+id/MainMenuFragment"
        android:name="com.example.group6.MainMenuFragment"
        android:label="@string/mainmenu_fragment_label"
        tools:layout="@layout/fragment_mainmenu">

        <action
            android:id="@+id/action_MainMenuFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
        <action
            android:id="@+id/action_MainMenuFragment_to_ConnectionFragment"
            app:destination="@id/ConnectionFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.example.group6.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_SettingsFragment_to_MainMenuFragment"
            app:destination="@id/MainMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/ConnectionFragment"
        android:name="com.example.group6.ConnectionFragment"
        android:label="@string/connection_fragment_label" >
        <action
            android:id="@+id/action_ConnectionFragment_to_MainMenuFragment"
            app:destination="@id/MainMenuFragment" />
    </fragment>
</navigation>
